Parse threads in parallel